2017-06-13  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (dump_access_tree_1): Fix accidental dumping to stderr
	instead of f.

2017-06-13  Yury Gribov  <tetra2005@gmail.com>

	* match.pd: New pattern.

2017-06-13  Yury Gribov  <tetra2005@gmail.com>

	* tree-vrp.c (is_masked_range_test): New function.
	(register_edge_assert_for): Determine ranges for
	some bit tests.

2017-06-13  Yury Gribov  <tetra2005@gmail.com>

	PR tree-optimization/67328
	* fold-const.c (maskable_range_p): New function.
	(build_range_check): Generate bittests if possible.

2017-06-13  Martin Liska  <mliska@suse.cz>

	* gimple-pretty-print.c (dump_probability): Add new argument.
	(dump_edge_probability): Dump both probability and count.
	(dump_gimple_label): Likewise.
	(dump_gimple_bb_header): Likewise.

2017-06-13  Georg-Johann Lay  <avr@gjlay.de>

	PR target/81072
	* config/avr/avr-devices.c: Fix indentation.
	* config/avr/gen-avr-mmcu-specs.c: Dito.

2017-06-13  Richard Biener  <rguenther@suse.de>

	* tree-vect-loop.c (vect_model_reduction_cost): Do not fail,
	instead get vector type from stmt_info.
	(vectorizable_reduction): Adjust.  Remove dead code.

2017-06-13  Richard Biener  <rguenther@suse.de>

	PR middle-end/81065
	* fold-const.c (extract_muldiv_1): Remove bogus distribution
	case of C * (x * C2 + C3).
	(fold_addr_of_array_ref_difference): Properly fold index difference.

2017-06-12  David S. Miller  <davem@davemloft.net>

	PR target/80968
	* config/sparc/sparc.md (return expander): Emit frame blockage if
	function uses alloca.

2017-06-12  Richard Sandiford  <richard.sandiford@linaro.org>

	* combine.c (make_field_assignment): Check len rather than the mode
	precision when calling force_to_mode.

2017-06-12  Georg-Johann Lay  <avr@gjlay.de>

	Support multilibs and devices that see flash in RAM address range.

	PR target/81072
	* config/avr/avr-arch.h (avr_arch_id) <ARCH_AVRXMEGA3>: New enum.
	(avr_mcu_t) <flash_pm_offset>: New field.